frontend/app/globals.css
@import "tailwindcss";

html,
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}


/* for light mode */
:root {
  --background: #F8F8F8;
  --foreground: #0c1821;

  /* Branding colors */
  --brand-dark: #0C1821;
  --brand-light: #CCC9DC;
  --button-red: #7E111A;
  --text-light: #0C1821;
  --feature-bg: #0C1821;
  --text-onhover-red: #7E111A;
  --hover-bg: #CCC9DC; 
  --hover-box: #CCC9DC;
  --button-onhover-red: #5A0C13;
  --button-clr:#e9e9ee;
  --gradient-color: #FFFFFF;
  --input-bg: #ffffff;
  --input-text: #0c1821;
  --main-body: #e9e9ee;
  --headerfooter: #ccc9dc;
  --bars:#F4F4F4;
  --light-color: #EDEDED;



  /* Branding fonts */
  --font-body: var(--font-inter);
  --font-display: var(--font-outfit);
}


/* for dark mode */
.dark {
  --background: #0C1821;
  --foreground: #CCC9DC;
  --text-light: #e9e9ee;
  --text-onhover-red: #B8333C;
  --button-onhover-red: #5A0C13;
  --button-clr:#e9e9ee;
  --hover-bg: #324A5F; 
  --hover-box: #19293b;
  --gradient-color: #262626;
  --input-bg: #1f2937;
  --input-text: #f4f4f4;
  --main-body: #121e2b;
  --headerfooter: #0C1821;
  --bars:#0C1821;
  --feature-bg: #EDEDED;
  --light-color: #EDEDED;

}


@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@keyframes marquee {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(-100%);
  }
}

.animate-marquee {
  animation: marquee var(--duration) linear infinite;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-outfit), var(--font-inter), Arial, Helvetica, sans-serif;
}

